[gd_scene load_steps=20 format=3 uid="uid://b25eykthavpca"]

[ext_resource type="Script" path="res://src/GUI/Scripts/CombatScene.gd" id="1_xvnaf"]
[ext_resource type="Texture2D" uid="uid://ckow3jnmsekhf" path="res://img/Background/WhiteBackground.png" id="2_8ogsh"]
[ext_resource type="AudioStream" uid="uid://bqqa4rs8m6mcs" path="res://sound/1-15. Battle (Vs. Trainer).mp3" id="2_8ycrl"]
[ext_resource type="Texture2D" uid="uid://clb1tr2ymdcnf" path="res://img/Pokemons/13.jpg" id="3_ewqkh"]
[ext_resource type="Texture2D" uid="uid://eocvgujeu84h" path="res://img/Pokemons/7.jpg" id="4_hc2w6"]
[ext_resource type="AudioStream" uid="uid://bnl0yhdlypqef" path="res://sound/Attack.mp3" id="6_vhjxb"]
[ext_resource type="AudioStream" uid="uid://cmnxojcqcga6a" path="res://sound/Buff.mp3" id="7_r2u6b"]

[sub_resource type="LabelSettings" id="LabelSettings_03ffu"]
font_size = 30
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_n3k4j"]
font_size = 20
font_color = Color(0.705882, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_yc243"]
font_size = 20
font_color = Color(0.027451, 0, 0.741176, 1)

[sub_resource type="Animation" id="Animation_e7aof"]
resource_name = "EnemyAttack"
length = 1.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyPokemon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(856, 176), Vector2(836, 196), Vector2(856, 176), Vector2(836, 196), Vector2(856, 176), Vector2(836, 196), Vector2(856, 176)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerPokemon:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_o0x6i"]
resource_name = "EnemyBuff"
length = 1.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyPokemon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(856, 176), Vector2(836, 196), Vector2(856, 176), Vector2(836, 196), Vector2(856, 176), Vector2(836, 196), Vector2(856, 176)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EnemyPokemon:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 1, 0, 1), Color(1, 1, 1, 1), Color(0, 1, 0, 1), Color(1, 1, 1, 1), Color(0, 1, 0, 1), Color(1, 1, 1, 1), Color(0, 1, 0, 1), Color(1, 1, 1, 1), Color(0, 1, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_vr26j"]
resource_name = "PlayerAttack"
length = 1.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerPokemon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(224, 384), Vector2(244, 364), Vector2(224, 384), Vector2(244, 364), Vector2(224, 384), Vector2(244, 364), Vector2(224, 384)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EnemyPokemon:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_8x58p"]
resource_name = "PlayerBuff"
length = 1.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerPokemon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(224, 384), Vector2(244, 364), Vector2(224, 384), Vector2(244, 364), Vector2(224, 384), Vector2(244, 364), Vector2(224, 384)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerPokemon:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 1, 0, 1), Color(1, 1, 1, 1), Color(0, 1, 0, 1), Color(1, 1, 1, 1), Color(0, 1, 0, 1), Color(1, 1, 1, 1), Color(0, 1, 0, 1), Color(1, 1, 1, 1), Color(0, 1, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_arwtb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerPokemon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(224, 384)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerPokemon:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EnemyPokemon:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(856, 176)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("EnemyPokemon:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("WonPanel:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_n53iv"]
resource_name = "Won"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WonPanel:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false, true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_33bkb"]
_data = {
"EnemyAttack": SubResource("Animation_e7aof"),
"EnemyBuff": SubResource("Animation_o0x6i"),
"PlayerAttack": SubResource("Animation_vr26j"),
"PlayerBuff": SubResource("Animation_8x58p"),
"RESET": SubResource("Animation_arwtb"),
"Won": SubResource("Animation_n53iv")
}

[sub_resource type="FontVariation" id="FontVariation_qb0jw"]

[sub_resource type="LabelSettings" id="LabelSettings_r3r50"]
font = SubResource("FontVariation_qb0jw")
font_size = 100
font_color = Color(0.47451, 0.360784, 0, 1)

[node name="CombatScene" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_xvnaf")

[node name="WhiteBackground" type="Sprite2D" parent="."]
position = Vector2(539, 357)
scale = Vector2(3.68667, 4.44048)
texture = ExtResource("2_8ogsh")

[node name="EnemyPokemon" type="Sprite2D" parent="."]
position = Vector2(856, 176)
scale = Vector2(5, 5)
texture = ExtResource("3_ewqkh")

[node name="PlayerPokemon" type="Sprite2D" parent="."]
position = Vector2(224, 384)
scale = Vector2(5, 5)
texture = ExtResource("4_hc2w6")

[node name="InfoEnemy" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.111
anchor_top = 0.056
anchor_right = 0.23
anchor_bottom = 0.156
offset_left = 24.12
offset_top = 15.68
offset_right = 23.6
offset_bottom = 15.68
metadata/_edit_group_ = true

[node name="Name" type="Label" parent="InfoEnemy"]
layout_mode = 0
offset_left = -88.0
offset_top = -8.0
offset_right = -29.0
offset_bottom = 34.0
text = "ABC"
label_settings = SubResource("LabelSettings_03ffu")

[node name="HP" type="Label" parent="InfoEnemy"]
layout_mode = 0
offset_left = -88.0
offset_top = 32.0
offset_right = -48.0
offset_bottom = 60.0
text = "HP: 100/100"
label_settings = SubResource("LabelSettings_n3k4j")

[node name="MP" type="Label" parent="InfoEnemy"]
layout_mode = 0
offset_left = -88.0
offset_top = 56.0
offset_right = -46.0
offset_bottom = 84.0
text = "MP: 100/100"
label_settings = SubResource("LabelSettings_yc243")

[node name="InfoPlayer" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.111
anchor_top = 0.056
anchor_right = 0.23
anchor_bottom = 0.156
offset_left = 776.12
offset_top = 343.68
offset_right = 775.6
offset_bottom = 343.68
metadata/_edit_group_ = true

[node name="Name" type="Label" parent="InfoPlayer"]
layout_mode = 0
offset_left = -88.0
offset_top = -8.0
offset_right = -29.0
offset_bottom = 34.0
text = "ABC"
label_settings = SubResource("LabelSettings_03ffu")

[node name="HP" type="Label" parent="InfoPlayer"]
layout_mode = 0
offset_left = -88.0
offset_top = 32.0
offset_right = -48.0
offset_bottom = 60.0
text = "HP: 100/100"
label_settings = SubResource("LabelSettings_n3k4j")

[node name="MP" type="Label" parent="InfoPlayer"]
layout_mode = 0
offset_left = -88.0
offset_top = 56.0
offset_right = -46.0
offset_bottom = 84.0
text = "MP: 100/100"
label_settings = SubResource("LabelSettings_yc243")

[node name="Panel" type="Panel" parent="."]
anchors_preset = -1
anchor_top = 0.754
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -36.88
grow_horizontal = 2
grow_vertical = 0

[node name="InfoCombat" type="Control" parent="Panel"]
layout_mode = 1
anchor_right = 0.75
anchor_bottom = 1.0
offset_right = -6.10352e-05
offset_bottom = 1.0
grow_vertical = 0
metadata/_edit_group_ = true

[node name="Player" type="Control" parent="Panel/InfoCombat"]
layout_mode = 1
anchor_top = 0.507
anchor_right = 1.015
anchor_bottom = 1.0
offset_top = -0.00500488
offset_right = 0.0449219
grow_vertical = 2

[node name="PlayerTaget" type="Label" parent="Panel/InfoCombat/Player"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.107
offset_top = 9.0
offset_right = -777.0
offset_bottom = 29.658
text = ">"
horizontal_alignment = 1

[node name="PlayerName" type="Label" parent="Panel/InfoCombat/Player"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.044
anchor_top = 0.433
anchor_right = 1.0
anchor_bottom = 0.54
offset_left = -3.596
offset_top = -36.898
offset_right = -3.52802
offset_bottom = -25.24
text = "Tên: ABC - Cấp độ: 3 - Hệ: Điện"

[node name="PlayerInfo" type="Label" parent="Panel/InfoCombat/Player"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.044
anchor_top = 0.433
anchor_right = 1.0
anchor_bottom = 0.54
offset_left = -3.596
offset_top = -4.898
offset_right = -17.0
offset_bottom = 6.76
text = "Sát thương:  500   
Giáp:              500"

[node name="Enemy" type="Control" parent="Panel/InfoCombat"]
layout_mode = 1
anchor_right = 1.013
anchor_bottom = 0.5
offset_right = -0.361023
offset_bottom = -1.5

[node name="EnemyTaget" type="Label" parent="Panel/InfoCombat/Enemy"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.057
anchor_right = 0.04
anchor_bottom = 0.34
offset_top = -0.0420003
offset_right = -0.280003
offset_bottom = -0.0400009
text = ">"
horizontal_alignment = 1

[node name="EnemyName" type="Label" parent="Panel/InfoCombat/Enemy"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.04
anchor_top = 0.057
anchor_right = 0.991
anchor_bottom = 0.34
offset_left = -0.280003
offset_top = -0.0420003
offset_right = 0.262939
offset_bottom = -0.0400009
text = "Tên: ABC - Cấp độ: 3 - Hệ: Độc, Nước"

[node name="EnemyInfo" type="Label" parent="Panel/InfoCombat/Enemy"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.04
anchor_top = 0.057
anchor_right = 0.991
anchor_bottom = 0.34
offset_left = -0.280003
offset_top = 31.958
offset_right = 0.262939
offset_bottom = 31.96
text = "Sát thương:  500   
Giáp:              500"

[node name="OptionInfo" type="Control" parent="Panel/InfoCombat"]
layout_mode = 1
anchor_left = 0.709
anchor_right = 0.999
anchor_bottom = 0.991
offset_left = -9.29004
offset_top = 6.0
offset_right = -9.19006
offset_bottom = -3.06502
grow_horizontal = 2
grow_vertical = 0

[node name="Select" type="HBoxContainer" parent="Panel/InfoCombat/OptionInfo"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.854
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.0979919
grow_horizontal = 2
grow_vertical = 0

[node name="Yes" type="Button" parent="Panel/InfoCombat/OptionInfo/Select"]
layout_mode = 2
text = "[ Enter ] | Dùng "

[node name="No" type="Button" parent="Panel/InfoCombat/OptionInfo/Select"]
layout_mode = 2
text = "[ Esc ] | Hủy"

[node name="Name" type="Label" parent="Panel/InfoCombat/OptionInfo"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.157
offset_bottom = -0.0279999
grow_horizontal = 2
grow_vertical = 2
text = "Skill1"
vertical_alignment = 1

[node name="Info" type="Label" parent="Panel/InfoCombat/OptionInfo"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.162
anchor_right = 1.0
anchor_bottom = 0.794
offset_top = -0.0480003
offset_bottom = 0.0239868
grow_horizontal = 2
grow_vertical = 2
text = "Thông tin"

[node name="OptionBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.756
anchor_right = 1.0
anchor_bottom = 0.994
offset_left = -7.48004
offset_top = -6.0
offset_right = -6.0
offset_bottom = 8.284
alignment = 1
metadata/_edit_group_ = true

[node name="Skill1" type="Button" parent="Panel/OptionBox"]
layout_mode = 2
text = "[ Z ] | Tấn công cơ bản"
alignment = 0

[node name="Skill2" type="Button" parent="Panel/OptionBox"]
layout_mode = 2
text = "[ X ] | Skill 2"
alignment = 0

[node name="Skill3" type="Button" parent="Panel/OptionBox"]
layout_mode = 2
text = "[ C ] | Skill 3"
alignment = 0

[node name="ChangePokemon" type="Button" parent="Panel/OptionBox"]
layout_mode = 2
text = "[ A ] | Đổi Pokemon"
alignment = 0

[node name="ThuPhuc" type="Button" parent="Panel/OptionBox"]
layout_mode = 2
text = "[ S ] | Thu Phục"
alignment = 0

[node name="Quit" type="Button" parent="Panel/OptionBox"]
layout_mode = 2
text = "[ Q ] | Đầu hàng"
alignment = 0

[node name="AudioCombat" type="AudioStreamPlayer2D" parent="."]
process_mode = 2
stream = ExtResource("2_8ycrl")
volume_db = 12.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_33bkb")
}

[node name="TimerAttackTaget" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="TimerEnergyCount" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AudioAttackEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_vhjxb")
volume_db = 15.0

[node name="AudioBuffEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_r2u6b")
volume_db = 15.0

[node name="WonPanel" type="Sprite2D" parent="."]
visible = false
position = Vector2(539, 357)
scale = Vector2(3.68667, 4.44048)
texture = ExtResource("2_8ogsh")

[node name="Label" type="Label" parent="WonPanel"]
offset_left = -108.228
offset_top = -70.7131
offset_right = 110.772
offset_bottom = 66.2869
text = "Won"
label_settings = SubResource("LabelSettings_r3r50")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Panel/InfoCombat/OptionInfo/Select/Yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="Panel/InfoCombat/OptionInfo/Select/No" to="." method="_on_no_pressed"]
[connection signal="pressed" from="Panel/OptionBox/Skill1" to="." method="_on_skill_1_pressed"]
[connection signal="pressed" from="Panel/OptionBox/Skill2" to="." method="_on_skill_2_pressed"]
[connection signal="pressed" from="Panel/OptionBox/Skill3" to="." method="_on_skill_3_pressed"]
[connection signal="pressed" from="Panel/OptionBox/ChangePokemon" to="." method="_on_change_pokemon_pressed"]
[connection signal="pressed" from="Panel/OptionBox/ThuPhuc" to="." method="_on_thu_phuc_pressed"]
[connection signal="pressed" from="Panel/OptionBox/Quit" to="." method="_on_quit_pressed"]
[connection signal="timeout" from="TimerAttackTaget" to="." method="_on_timer_attack_taget_timeout"]
[connection signal="timeout" from="TimerEnergyCount" to="." method="_on_timer_energy_count_timeout"]
